# smooth

./: .gitignore  README.md  llama-cache.py  mcp-remote-wrapper.sh  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.playwright-mcp/: page-2026-07-06T02-11-21-047Z.yml  page-2026-07-06T02-11-38-278Z.yml  page-2026-07-06T02-11-49-675Z.yml
scripts/: macos-resign.sh  tauri-build.sh
src/: Agents.tsx  App.css  App.tsx  Chat.tsx  CommandPalette.tsx  FollowUpEmailAgent.tsx  ImportDocuments.css  ImportDocuments.tsx  LlamaSettings.tsx  LlmRunChoice.tsx  McpSettings.tsx  Onboarding.tsx  ReminderWorkflows.css  ReminderWorkflows.tsx  Reminders.tsx  SlackSettings.tsx  SlackShareAgent.tsx  llmPreferences.ts  main.tsx  semantic.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/smooth-diarize/: Cargo.toml
src-tauri/sidecars/smooth-diarize/src/: main.rs
src-tauri/src/: audio_capture.rs  audio_preprocess.rs  calendar.rs  chat.rs  diarization.rs  export_notes.rs  gmail.rs  lib.rs  llama_runtime.rs  llm.rs  main.rs  meeting_notes.rs  onboarding.rs  reminders.rs  semantic_search.rs  stt.rs  system_audio.rs
src-tauri/src/agents/: catalog.rs  context.rs  flow.rs  follow_up.rs  mod.rs  persistence.rs  registry.rs  reminder_workflows.rs  runtime.rs  tool.rs  worker.rs
src-tauri/src/agents/tools/: links.rs  mod.rs  notes.rs  search.rs
src-tauri/src/imports/: mod.rs  types.rs  worker.rs
src-tauri/src/imports/converters/: anytomd.rs  mod.rs  pdf.rs
src-tauri/src/mcp/: handler.rs  mod.rs  server.rs
src-tauri/src/slack/: api.rs  mod.rs  notes.rs  socket.rs
src-tauri/src/stt/: engine.rs
src-tauri/swift/: smooth_system_audio.swift
