[package]
name = "smooth"
version = "0.1.0"
description = "Knowledge bank manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smooth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Smooth's primary packaged target is macOS, and whisper.cpp's Metal backend is
# the tested path on Apple Silicon. Keeping it as the default also makes plain
# `tauri build` match `tauri dev -- --features metal`.
default = ["metal"]
metal = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Agent framework: anyhow for ergonomic tool errors, async-trait so the
# AgentTool trait can be stored as a `dyn` object in the registry.
anyhow = "1"
async-trait = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
tokio = { version = "1", features = ["time", "net", "sync"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
rmcp = { version = "2.2", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
rand = "0.9"
cpal = "0.15"
hound = "3.5"
whisper-rs = { version = "0.16", default-features = false }
tauri-plugin-google-auth = "0.5.1"
