[package]
name = "smooth-diarize"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
polyvoice = { version = "0.9.0", default-features = false, features = ["onnx", "download", "segmentation", "embedder", "clusterer", "resegmentation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
